# Graph-spectral-partitioning

./: .gitignore  CMakeLists.txt  Graph.cpp  Graph.h  LICENSE  README.md  graph_spectral_partitioning.sln  graph_spectral_partitioning.vcxproj  main.cpp
data/: small_test.mtx  small_test2.mtx
report/: bib.bib  cover.tex  main.tex
